# g4Neutron_XS

./: README.md  g4had.cc
app/: g4had.cc
cmake/: CMakeLists.txt  g4NeutronXSConfig.cmake  g4NeutronXSConfigVersion.cmake  g4NeutronXSND280_USE.cmake
dict/: G4HadStudiesDict.h  G4HadStudiesDict.xml
inc/: HadAnalysis.hh  HadPhysicsList.hh  HadPhysicsListMessenger.hh  ND280Exception.hh  ND280ExtraPhysics.hh  ND280HadPhysicsList.hh  ND280HadPhysicsListMessenger.hh  Tg4NeutronXS_version.hxx  Tg4NeutronXS_version_LinkDef.h  g4NeutronXS_version.h
scripts/: kaon_xs_plot.C  makeInputs.py  parameterizeDataXS.C  plot_xs.py
src/: HadAnalysis.cc  HadDetectorConstruction.cc  HadPhysicsList.cc  HadPhysicsListMessenger.cc  HadPrimaryGeneratorAction.cc  HadRunAction.cc  HadStackingAction.cc  ND280HadPhysicsList.cc  ND280HadPhysicsListMessenger.cc
